@@ -1,7 +1,7 @@
 Package: mlt.docreg
 Title: Most Likely Transformations: Documentation and Regression Tests
-Version: 0.1-5
-Date: 2017-04-04
+Version: 0.1-6
+Date: 2017-04-25
 Authors@R: person("Torsten", "Hothorn", role = c("aut", "cre"),
                   email = "Torsten.Hothorn@R-project.org")  
 Description: Additional documentation, a package vignette and 
@@ -13,6 +13,6 @@ Suggests: variables, basefun, np, eha, truncreg, lattice, MASS, TH.data,
   HSAUR3, sandwich, flexsurv, grid, latticeExtra, colorspace, mgcv,
   coxinterval, ICsurv, polspline, logspline, bshazard, gss, 
   MIICD, TransModel, dynsurv, timereg, survivalMPL, gamlss, Matrix, 
-  muhaz, ICE, ordinal, VGAM, AER, coin, gamlss.data, mlbench, alabama
+  muhaz, ICE, ordinal, VGAM, AER, coin, gamlss.data, mlbench
 VignetteBuilder: knitr
 License: GPL-2
