@@ -1,7 +1,6 @@
 
 library("mlt")
 library("eha")
-library("alabama")
 set.seed(29)
 
 ## ************** Exponential - AFT *********************************
