@@ -1,7 +1,6 @@
 
 library("mlt")
 library("survival")
-library("alabama")
 
 data("GBSG2", package = "TH.data")
 
