@@ -1,5 +1,5 @@
 
-R version 3.3.3 (2017-03-06) -- "Another Canoe"
+R version 3.4.0 (2017-04-21) -- "You Stupid Darkness"
 Copyright (C) 2017 The R Foundation for Statistical Computing
 Platform: x86_64-pc-linux-gnu (64-bit)
 
@@ -20,8 +20,6 @@ Type 'q()' to quit R.
 Loading required package: basefun
 Loading required package: variables
 > library("survival")
-> library("alabama")
-Loading required package: numDeriv
 > 
 > data("GBSG2", package = "TH.data")
 > 
@@ -60,4 +58,4 @@ Loading required package: numDeriv
 > 
 > proc.time()
    user  system elapsed 
-  1.204   0.024   1.225 
+  1.496   0.036   1.531 
