@@ -1,5 +1,5 @@
 
-R version 3.3.3 (2017-03-06) -- "Another Canoe"
+R version 3.4.0 (2017-04-21) -- "You Stupid Darkness"
 Copyright (C) 2017 The R Foundation for Statistical Computing
 Platform: x86_64-pc-linux-gnu (64-bit)
 
@@ -20,8 +20,6 @@ Type 'q()' to quit R.
 Loading required package: basefun
 Loading required package: variables
 > library("lattice")
-> library("alabama")
-Loading required package: numDeriv
 > 
 > data("faithful")
 > 
@@ -132,4 +130,4 @@ Bs9(waiting)   -0.7427123    0.8292219   -0.9214163    1.0000000
 > 
 > proc.time()
    user  system elapsed 
-  2.560   0.052   2.610 
+  3.224   0.040   3.263 
