@@ -1,5 +1,5 @@
 
-R version 3.3.3 (2017-03-06) -- "Another Canoe"
+R version 3.4.0 (2017-04-21) -- "You Stupid Darkness"
 Copyright (C) 2017 The R Foundation for Statistical Computing
 Platform: x86_64-pc-linux-gnu (64-bit)
 
@@ -116,4 +116,4 @@ Note: method with signature 'dsparseMatrix#dsparseMatrix' chosen for function 'k
 > 
 > proc.time()
    user  system elapsed 
-  3.808   0.048   3.858 
+  4.752   0.056   4.809 
