@@ -1,14 +1,14 @@
 Package: mlt
 Title: Most Likely Transformations
-Version: 0.1-3
-Date: 2017-04-04
+Version: 0.1-4
+Date: 2017-04-25
 Authors@R: person("Torsten", "Hothorn", role = c("aut", "cre"),
                   email = "Torsten.Hothorn@R-project.org")  
 Description: Likelihood-based estimation of conditional transformation
   models via the most likely transformation approach described in
   Hothorn et al. (2016) <arXiv:1508.06749>.
 Depends: basefun (>= 0.0-37), variables (>= 0.0-30)
-Imports: BB, stats, quadprog, graphics, methods, grDevices, sandwich,
+Imports: BB, alabama, stats, quadprog, graphics, methods, grDevices, sandwich,
   numDeriv
-Suggests: MASS, nnet, TH.data, survival, multcomp, alabama
+Suggests: MASS, nnet, TH.data, survival, multcomp
 License: GPL-2
