@@ -3,6 +3,7 @@ import("basefun")
 import("variables")
 import("numDeriv") ### needed by BB???
 importFrom("BB", "spg", "BBoptim")
+importFrom("alabama", "auglag")
 importFrom("sandwich", "estfun")
 importFrom("stats", "simulate", "variable.names", "model.matrix", "logLik",
            "vcov", "AIC", "coef", "confint", "dlogis", "dnorm",
