@@ -1,5 +1,5 @@
 
-R version 3.3.3 (2017-03-06) -- "Another Canoe"
+R version 3.4.0 (2017-04-21) -- "You Stupid Darkness"
 Copyright (C) 2017 The R Foundation for Statistical Computing
 Platform: x86_64-pc-linux-gnu (64-bit)
 
@@ -105,9 +105,9 @@ Loading required package: variables
 > mydata <- data.frame(y = Surv(y, sample(0:1, length(y), replace = TRUE), type = "left"), g = g)
 > coef(opt <- mlt(m, data = mydata))
     log(y)     Bs1(y)     Bs2(y)     Bs3(y)     Bs4(y)     Bs5(y)     Bs6(y) 
- 0.4715831 -0.1212771  0.6053507  0.6053507  0.6053506  0.6053506  0.9067436 
+ 0.4715877 -0.1212752  0.6052839  0.6052839  0.6052839  0.6052839  0.9068056 
         g2         g3 
- 0.7191414  0.9767262 
+ 0.7192452  0.9766794 
 > 
 > ### interval censoring
 > Bb <- Bernstein_basis(numeric_var("y", support = c(0, max(y + 1) + .1)), order = 5,
@@ -117,9 +117,9 @@ Loading required package: variables
 > m <- ctm(response = c(blog = lb, bBern = Bb), shifting = s, todist = "MinExtrVal")
 > coef(opt <- mlt(m, data = mydata))
     log(y)     Bs1(y)     Bs2(y)     Bs3(y)     Bs4(y)     Bs5(y)     Bs6(y) 
- 0.4092566 -1.4642347  0.3841126  0.3841126  0.3841125  0.3841125  1.2510145 
+ 0.4092565 -1.4642351  0.3841127  0.3841127  0.3841127  0.3841127  1.2510145 
         g2         g3 
- 0.8373338  0.9512159 
+ 0.8373337  0.9512158 
 > 
 > ### uncensored, time-varying coefficints in both groups
 > mydata <- data.frame(y = y, g = g)
@@ -159,4 +159,4 @@ Bs5(y):(Intercept) Bs6(y):(Intercept)          Bs1(y):g2          Bs2(y):g2
 > 
 > proc.time()
    user  system elapsed 
-  2.060   0.044   2.100 
+  2.928   0.036   2.963 
